--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
+    "less-loader": "^11.1.0",
+    "loader": "^2.1.1",
+    "nanoid": "^4.0.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
