--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "console-browserify": "^1.2.0",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.7",
+    "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "loader": "^2.1.1",
     "nanoid": "^4.0.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "vue": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
